# yt-thumb

./: .copier-answers.yml  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  make_youtube_thumbnail_numbered.py  pyproject.toml
.github/workflows/: docker-release.yml  pr-quality-checks.yml  pr-tag-check.yml
