[project]
name = "yt-thumb"
version = "0.1.0"
description = "yt-thumb"
authors = [
    {name = "みず", email = "mizu.copo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [

]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "python-decouple-stubs>=0.1",
    "ruff>=0.14.10",
    "taskipy>=1.14.1",
    "types-requests>=2.32.4.20250913",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "ARG", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
python_version = "3.14"
files = ["src", "tests"]
mypy_path = "src:stubs"

[tool.taskipy.tasks]
test = "ruff check --fix src tests stubs && ruff format src tests stubs && mypy && pytest"
